# 11785_Team22_AnnoMI_Conversational_Modeling

./: .gitignore  EXPERIMENTS_REPORT.md  FINAL_REPORT.md  README.md  STAGE1_REPORT.md  environment.yml  pyproject.toml  requirements.txt  run_augmented_pipeline.sh
configs/: data_config.yaml  data_config_ctx1.yaml  data_config_ctx2.yaml  data_config_ctx4.yaml  embeddings_config.yaml  embeddings_config_aug_s200.yaml  embeddings_config_aug_s400.yaml  embeddings_config_augmented.yaml  embeddings_config_ctx1.yaml  embeddings_config_ctx2.yaml  embeddings_config_ctx4.yaml  embeddings_config_deberta.yaml  embeddings_config_mpnet.yaml  embeddings_config_paraphrase-mpnet.yaml  embeddings_config_roberta.yaml  train_config_aug_s200.yaml  train_config_aug_s200_nowt.yaml  train_config_aug_s400.yaml  train_config_aug_s800_nowt.yaml  train_config_augmented.yaml  train_config_ctx1.yaml  train_config_ctx2.yaml  train_config_ctx4.yaml  train_config_deberta.yaml  train_config_deberta_finetune.yaml  train_config_modernbert_finetune.yaml  train_config_modernbert_finetune_v2.yaml  train_config_mpnet.yaml  train_config_paraphrase-mpnet.yaml  train_config_roberta.yaml  train_config_roberta_finetune.yaml
data/: outputs_deberta_finetune_log.txt  outputs_modernbert_finetune_log.txt  outputs_roberta_finetune_log.txt
data/embeddings_augmented/: val_embeddings.npy  (+3 more)
notebooks/: qwen8b_embedding_aws.py  qwen8b_lora_aws.py
scripts/: make_report_figures.py  run_gpt4o_mini_classify.py
tests/: test_augmentation_export.py  test_baseline_stage1.py  test_chunking.py  test_ingestion.py  test_tokenizer.py
(+150 files in other folders)
